# PythonIntroMatSci

./: .gitignore  area.py  pyproject.toml  requirements.txt
pythonintro/: Classes.ipynb  Classes_Inheritance.ipynb  Classes_PrivateVariables.ipynb  DataTypes.ipynb  Exceptions.ipynb  Files.ipynb  FirstSteps.ipynb  FlowControl.ipynb  Functions.ipynb  IteratorGeneratorDecorator.ipynb  ModuleIntro.ipynb  PandasIntro.ipynb  PythonSpeed.ipynb  Python_Skeleton_Simple.py  RandomWalk2D.ipynb  Solutions_Python.ipynb  example_file.txt  fibonacci.py  index.ipynb
pythonintro/solutions/: Fibonacci.py  Solution_AccountClass.ipynb  Solution_Numba.ipynb  Solution_RandomWalk2D.ipynb  Solutions_Functions.ipynb  Solutions_Modules.ipynb  Solutions_Python.ipynb
