[tool.poetry]
name = "pythonintro"
version = "0.1.0"
description = ""
authors = ["Ulrich <ulrich.kerzel@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
