[tool.poetry]
name = "pythonintro"
version = "0.1.0"
description = ""
authors = ["Ulrich <ulrich.kerzel@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
numba = "^0.56.4"
line-profiler = "^4.0.2"
scalene = "^1.5.16"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
